service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-hostname
spec:
  selector:
    app: node-hostname
  ports:
    - protocol: TCP
      port: 3000  # Exposed service port
      targetPort: 3000  # Container port
      nodePort: 32499  # Choose a port in 30000-32767 range
  type: NodePort
