ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-hostname-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - minikube
    secretName: node-hostname-tls
  rules:
  - host: minikube
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-hostname
            port:
              number: 443
